--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,14 @@ authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+attrs = "^19.3.0"
+discrete-signals = "^0.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+hypothesis = "^5.5.1"
+codecov = "^2.0.15"
+pytest-flake8 = "^1.0.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
