Implement interval tree based sliding window

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 attrs = "^19.3.0"
+intervaltree = "^3.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
