--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^5.2"
 hypothesis = "^5.5.1"
 codecov = "^2.0.15"
 pytest-flake8 = "^1.0.4"
+pytest-cov = "^2.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
