--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ hypothesis = "^5.5.1"
 codecov = "^2.0.15"
 pytest-flake8 = "^1.0.4"
 pytest-cov = "^2.8.1"
+sphinx = "^2.4.2"
+sphinx-autodoc-typehints = "^1.10.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
