--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest-flake8 = "^1.0.4"
 pytest-cov = "^2.8.1"
 sphinx = "^2.4.2"
 sphinx-autodoc-typehints = "^1.10.3"
+sphinx_rtd_theme = "^0.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
