--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
   image: python:3.8
   environment:
     CODECOV_TOKEN:
-      from_secret: codecov_token
+      from_secret: code_cov
   commands:
   - pip install poetry
   - poetry install
